--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
       </div>
       <div class="flex-img">
         <div class="info-img">
-          <img src="/img/sobre1.jpg" alt="Imagem de uma mulher" />
+          <img src="./img/sobre1.jpg" alt="Imagem de uma mulher" />
         </div>
         <div class="info-img">
-          <img src="/img/sobre2.jpg" alt="imagem de alguém pintando" />
+          <img src="./img/sobre2.jpg" alt="imagem de alguém pintando" />
         </div>
       </div>
     </section>
